--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,145 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-navbar>
+    <ion-navbar>
+        <ion-title>
+            Ionic Flexbox News
+        </ion-title>
+    </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+    <div class="news">
+        <ion-card>
+            <img src="https://www.colourbox.com/preview/1686911-blurred-color-lights-background.jpg"/>
+            <ion-card-content text-wrap>
+                <ion-card-title>
+                    Nine Inch Nails Live
+                </ion-card-title>
+                <p>
+                    The most popular industrial group ever, and largely
+                    responsible for bringing the music to a mass audience.
+                </p>
+                <ion-row>
+                    <ion-col center text-center>
+                        <ion-note>
+                            12/09/2017 f
+                        </ion-note>
+                    </ion-col>
+                </ion-row>
+            </ion-card-content>
+        </ion-card>
+        <ion-card>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/d/dc/3266223-dark-background-with-beautiful-green-glamour-shining-sparked-eyes.jpg"/>
+            <ion-card-content>
+                <ion-card-title>
+                    Nine Inch Nails Live
+                </ion-card-title>
+                <p>
+                    The most popular industrial group ever, and largely
+                    responsible for bringing the music to a mass audience.
+                </p>
+                <ion-row>
+                    <ion-col center text-center>
+                        <ion-note>
+                            12/09/2017
+                        </ion-note>
+                    </ion-col>
+                </ion-row>
+            </ion-card-content>
+        </ion-card>
+        <ion-card>
+            <img src="https://www.colourbox.com/preview/1686911-blurred-color-lights-background.jpg"/>
+            <ion-card-content>
+                <ion-card-title>
+                    Nine Inch Nails Live
+                </ion-card-title>
+                <p>
+                    The most popular industrial group ever, and largely
+                    responsible for bringing the music to a mass audience.
+                </p>
+                <ion-row>
+                    <ion-col center text-center>
+                        <ion-note>
+                            12/09/2017
+                        </ion-note>
+                    </ion-col>
+                </ion-row>
+            </ion-card-content>
+        </ion-card>
+        <ion-card>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/d/dc/3266223-dark-background-with-beautiful-green-glamour-shining-sparked-eyes.jpg"/>
+            <ion-card-content>
+                <ion-card-title>
+                    Nine Inch Nails Live
+                </ion-card-title>
+                <p>
+                    The most popular industrial group ever, and largely
+                    responsible for bringing the music to a mass audience.
+                </p>
+                <ion-row>
+                    <ion-col center text-center>
+                        <ion-note>
+                            12/09/2017
+                        </ion-note>
+                    </ion-col>
+                </ion-row>
+            </ion-card-content>
+        </ion-card>
+        <ion-card>
+            <img src="https://www.colourbox.com/preview/1686911-blurred-color-lights-background.jpg"/>
+            <ion-card-content>
+                <ion-card-title>
+                    Nine Inch Nails Live
+                </ion-card-title>
+                <p>
+                    The most popular industrial group ever, and largely
+                    responsible for bringing the music to a mass audience.
+                </p>
+                <ion-row>
+                    <ion-col center text-center>
+                        <ion-note>
+                            12/09/2017
+                        </ion-note>
+                    </ion-col>
+                </ion-row>
+            </ion-card-content>
+        </ion-card>
+        <ion-card>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/d/dc/3266223-dark-background-with-beautiful-green-glamour-shining-sparked-eyes.jpg"/>
+            <ion-card-content>
+                <ion-card-title>
+                    Nine Inch Nails Live
+                </ion-card-title>
+                <p>
+                    The most popular industrial group ever, and largely
+                    responsible for bringing the music to a mass audience.
+                </p>
+                <ion-row>
+                    <ion-col center text-center>
+                        <ion-note>
+                            12/09/2017
+                        </ion-note>
+                    </ion-col>
+                </ion-row>
+            </ion-card-content>
+        </ion-card>
+        <ion-card class="flex-grow flex-align-self">
+            <img src="https://www.colourbox.com/preview/1686911-blurred-color-lights-background.jpg"/>
+            <ion-card-content>
+                <ion-card-title>
+                    Nine Inch Nails Live
+                </ion-card-title>
+                <p>
+                    The most popular industrial group ever, and largely
+                    responsible for bringing the music to a mass audience.
+                </p>
+                <ion-row>
+                    <ion-col center text-center>
+                        <ion-note>
+                            12/09/2017
+                        </ion-note>
+                    </ion-col>
+                </ion-row>
+            </ion-card-content>
+        </ion-card>
+    </div>
 </ion-content>
