--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,139 +7,241 @@
 </ion-header>
 
 <ion-content padding>
-    <div class="news">
-        <ion-card>
-            <img src="https://www.colourbox.com/preview/1686911-blurred-color-lights-background.jpg"/>
-            <ion-card-content text-wrap>
-                <ion-card-title>
-                    Nine Inch Nails Live
-                </ion-card-title>
-                <p>
-                    The most popular industrial group ever, and largely
-                    responsible for bringing the music to a mass audience.
-                </p>
-                <ion-row>
-                    <ion-col center text-center>
-                        <ion-note>
-                            12/09/2017 f
-                        </ion-note>
-                    </ion-col>
-                </ion-row>
-            </ion-card-content>
-        </ion-card>
-        <ion-card>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/d/dc/3266223-dark-background-with-beautiful-green-glamour-shining-sparked-eyes.jpg"/>
-            <ion-card-content>
-                <ion-card-title>
-                    Nine Inch Nails Live
-                </ion-card-title>
-                <p>
-                    The most popular industrial group ever, and largely
-                    responsible for bringing the music to a mass audience.
-                </p>
-                <ion-row>
-                    <ion-col center text-center>
-                        <ion-note>
-                            12/09/2017
-                        </ion-note>
-                    </ion-col>
-                </ion-row>
-            </ion-card-content>
-        </ion-card>
-        <ion-card>
-            <img src="https://www.colourbox.com/preview/1686911-blurred-color-lights-background.jpg"/>
-            <ion-card-content>
-                <ion-card-title>
-                    Nine Inch Nails Live
-                </ion-card-title>
-                <p>
-                    The most popular industrial group ever, and largely
-                    responsible for bringing the music to a mass audience.
-                </p>
-                <ion-row>
-                    <ion-col center text-center>
-                        <ion-note>
-                            12/09/2017
-                        </ion-note>
-                    </ion-col>
-                </ion-row>
-            </ion-card-content>
-        </ion-card>
-        <ion-card>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/d/dc/3266223-dark-background-with-beautiful-green-glamour-shining-sparked-eyes.jpg"/>
-            <ion-card-content>
-                <ion-card-title>
-                    Nine Inch Nails Live
-                </ion-card-title>
-                <p>
-                    The most popular industrial group ever, and largely
-                    responsible for bringing the music to a mass audience.
-                </p>
-                <ion-row>
-                    <ion-col center text-center>
-                        <ion-note>
-                            12/09/2017
-                        </ion-note>
-                    </ion-col>
-                </ion-row>
-            </ion-card-content>
-        </ion-card>
-        <ion-card>
-            <img src="https://www.colourbox.com/preview/1686911-blurred-color-lights-background.jpg"/>
-            <ion-card-content>
-                <ion-card-title>
-                    Nine Inch Nails Live
-                </ion-card-title>
-                <p>
-                    The most popular industrial group ever, and largely
-                    responsible for bringing the music to a mass audience.
-                </p>
-                <ion-row>
-                    <ion-col center text-center>
-                        <ion-note>
-                            12/09/2017
-                        </ion-note>
-                    </ion-col>
-                </ion-row>
-            </ion-card-content>
-        </ion-card>
-        <ion-card>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/d/dc/3266223-dark-background-with-beautiful-green-glamour-shining-sparked-eyes.jpg"/>
-            <ion-card-content>
-                <ion-card-title>
-                    Nine Inch Nails Live
-                </ion-card-title>
-                <p>
-                    The most popular industrial group ever, and largely
-                    responsible for bringing the music to a mass audience.
-                </p>
-                <ion-row>
-                    <ion-col center text-center>
-                        <ion-note>
-                            12/09/2017
-                        </ion-note>
-                    </ion-col>
-                </ion-row>
-            </ion-card-content>
-        </ion-card>
-        <ion-card class="flex-grow flex-align-self">
-            <img src="https://www.colourbox.com/preview/1686911-blurred-color-lights-background.jpg"/>
-            <ion-card-content>
-                <ion-card-title>
-                    Nine Inch Nails Live
-                </ion-card-title>
-                <p>
-                    The most popular industrial group ever, and largely
-                    responsible for bringing the music to a mass audience.
-                </p>
-                <ion-row>
-                    <ion-col center text-center>
-                        <ion-note>
-                            12/09/2017
-                        </ion-note>
-                    </ion-col>
-                </ion-row>
-            </ion-card-content>
-        </ion-card>
+    <div class="news-listing">
+        <div class="new">
+            <ion-card>
+                <img src="https://www.colourbox.com/preview/1686911-blurred-color-lights-background.jpg"/>
+                <ion-card-content text-wrap>
+                    <ion-card-title>
+                        Nine Inch Nails Live
+                    </ion-card-title>
+                    <p>
+                        The most popular industrial group ever, and largely
+                        responsible for bringing the music to a mass audience.
+                        The most popular industrial group ever, and largely
+                        responsible for bringing the music to a mass audience.
+                        The most popular industrial group ever, and largely
+                        responsible for bringing the music to a mass audience.
+                    </p>
+                    <ion-row>
+                        <ion-col center text-center>
+                            <ion-note>
+                                12/09/2017
+                            </ion-note>
+                        </ion-col>
+                    </ion-row>
+                </ion-card-content>
+            </ion-card>
+        </div>
+        <div class="new">
+            <ion-card>
+                <img src="https://www.colourbox.com/preview/1686911-blurred-color-lights-background.jpg"/>
+                <ion-card-content text-wrap>
+                    <ion-card-title>
+                        Nine Inch Nails Live
+                    </ion-card-title>
+                    <p>
+                        The most popular industrial group ever, and largely
+                        responsible for bringing the music to a mass audience.
+                    </p>
+                    <ion-row>
+                        <ion-col center text-center>
+                            <ion-note>
+                                12/09/2017
+                            </ion-note>
+                        </ion-col>
+                    </ion-row>
+                </ion-card-content>
+            </ion-card>
+        </div>
+        <div class="new">
+            <ion-card>
+                <img src="https://www.colourbox.com/preview/1686911-blurred-color-lights-background.jpg"/>
+                <ion-card-content text-wrap>
+                    <ion-card-title>
+                        Nine Inch Nails Live
+                    </ion-card-title>
+                    <p>
+                        The most popular industrial group ever, and largely
+                        responsible for bringing the music to a mass audience.
+                    </p>
+                    <ion-row>
+                        <ion-col center text-center>
+                            <ion-note>
+                                12/09/2017
+                            </ion-note>
+                        </ion-col>
+                    </ion-row>
+                </ion-card-content>
+            </ion-card>
+        </div>
+        <div class="new">
+            <ion-card>
+                <img src="https://www.colourbox.com/preview/1686911-blurred-color-lights-background.jpg"/>
+                <ion-card-content text-wrap>
+                    <ion-card-title>
+                        Nine Inch Nails Live
+                    </ion-card-title>
+                    <p>
+                        The most popular industrial group ever, and largely
+                        responsible for bringing the music to a mass audience.
+                    </p>
+                    <ion-row>
+                        <ion-col center text-center>
+                            <ion-note>
+                                12/09/2017
+                            </ion-note>
+                        </ion-col>
+                    </ion-row>
+                </ion-card-content>
+            </ion-card>
+        </div>
+        <div class="new">
+            <ion-card>
+                <img src="https://www.colourbox.com/preview/1686911-blurred-color-lights-background.jpg"/>
+                <ion-card-content text-wrap>
+                    <ion-card-title>
+                        Nine Inch Nails Live
+                    </ion-card-title>
+                    <p>
+                        The most popular industrial group ever, and largely
+                        responsible for bringing the music to a mass audience.
+                    </p>
+                    <ion-row>
+                        <ion-col center text-center>
+                            <ion-note>
+                                12/09/2017
+                            </ion-note>
+                        </ion-col>
+                    </ion-row>
+                </ion-card-content>
+            </ion-card>
+        </div>
+        <div class="new">
+            <ion-card>
+                <img src="https://www.colourbox.com/preview/1686911-blurred-color-lights-background.jpg"/>
+                <ion-card-content text-wrap>
+                    <ion-card-title>
+                        Nine Inch Nails Live
+                    </ion-card-title>
+                    <p>
+                        The most popular industrial group ever, and largely
+                        responsible for bringing the music to a mass audience.
+                    </p>
+                    <ion-row>
+                        <ion-col center text-center>
+                            <ion-note>
+                                12/09/2017
+                            </ion-note>
+                        </ion-col>
+                    </ion-row>
+                </ion-card-content>
+            </ion-card>
+        </div>
+        <div class="new">
+            <ion-card>
+                <img src="https://www.colourbox.com/preview/1686911-blurred-color-lights-background.jpg"/>
+                <ion-card-content text-wrap>
+                    <ion-card-title>
+                        Nine Inch Nails Live
+                    </ion-card-title>
+                    <p>
+                        The most popular industrial group ever, and largely
+                        responsible for bringing the music to a mass audience.
+                    </p>
+                    <ion-row>
+                        <ion-col center text-center>
+                            <ion-note>
+                                12/09/2017
+                            </ion-note>
+                        </ion-col>
+                    </ion-row>
+                </ion-card-content>
+            </ion-card>
+        </div>
+        <div class="new">
+            <ion-card>
+                <img src="https://www.colourbox.com/preview/1686911-blurred-color-lights-background.jpg"/>
+                <ion-card-content text-wrap>
+                    <ion-card-title>
+                        Nine Inch Nails Live
+                    </ion-card-title>
+                    <p>
+                        The most popular industrial group ever, and largely
+                        responsible for bringing the music to a mass audience.
+                    </p>
+                    <ion-row>
+                        <ion-col center text-center>
+                            <ion-note>
+                                12/09/2017
+                            </ion-note>
+                        </ion-col>
+                    </ion-row>
+                </ion-card-content>
+            </ion-card>
+        </div>
+        <div class="new">
+            <ion-card>
+                <img src="https://www.colourbox.com/preview/1686911-blurred-color-lights-background.jpg"/>
+                <ion-card-content text-wrap>
+                    <ion-card-title>
+                        Nine Inch Nails Live
+                    </ion-card-title>
+                    <p>
+                        The most popular industrial group ever, and largely
+                        responsible for bringing the music to a mass audience.
+                    </p>
+                    <ion-row>
+                        <ion-col center text-center>
+                            <ion-note>
+                                12/09/2017
+                            </ion-note>
+                        </ion-col>
+                    </ion-row>
+                </ion-card-content>
+            </ion-card>
+        </div>
+        <div class="new">
+            <ion-card>
+                <img src="https://www.colourbox.com/preview/1686911-blurred-color-lights-background.jpg"/>
+                <ion-card-content text-wrap>
+                    <ion-card-title>
+                        Nine Inch Nails Live
+                    </ion-card-title>
+                    <p>
+                        The most popular industrial group ever, and largely
+                        responsible for bringing the music to a mass audience.
+                    </p>
+                    <ion-row>
+                        <ion-col center text-center>
+                            <ion-note>
+                                12/09/2017
+                            </ion-note>
+                        </ion-col>
+                    </ion-row>
+                </ion-card-content>
+            </ion-card>
+        </div>
+        <div class="new">
+            <ion-card>
+                <img src="https://www.colourbox.com/preview/1686911-blurred-color-lights-background.jpg"/>
+                <ion-card-content text-wrap>
+                    <ion-card-title>
+                        Nine Inch Nails Live
+                    </ion-card-title>
+                    <p>
+                        The most popular industrial group ever, and largely
+                        responsible for bringing the music to a mass audience.
+                    </p>
+                    <ion-row>
+                        <ion-col center text-center>
+                            <ion-note>
+                                12/09/2017
+                            </ion-note>
+                        </ion-col>
+                    </ion-row>
+                </ion-card-content>
+            </ion-card>
+        </div>
     </div>
 </ion-content>
