--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -16,6 +16,40 @@
             <ion-segment-button value="mtv-news">
                 <img src="http://www.mtv.com/apple-touch-icon-precomposed.png" width="64px" height="64px">
             </ion-segment-button>
+            <ion-segment-button value="bild">
+                <img src="http://bilder.bild.de/fotos/bild-de-35605834/Bild/3.bild.png" width="64px" height="64px">
+            </ion-segment-button>
+            <ion-segment-button value="cnn">
+                <img src="http://i.cdn.cnn.com/cnn/.e/img/3.0/global/misc/apple-touch-icon.png" width="64px" height="64px">
+            </ion-segment-button>
+            <ion-segment-button value="daily-mail">
+                <img src="http://www.dailymail.co.uk/apple-touch-icon.png" width="64px" height="64px">
+            </ion-segment-button>
+            <ion-segment-button value="espn">
+                <img src="http://a.espncdn.com/wireless/mw5/r1/images/bookmark-icons/espn_icon-152x152.min.png" width="64px" height="64px">
+            </ion-segment-button>
+            <ion-segment-button value="national-geographic">
+                <img src="https://icons.better-idea.org/lettericons/N-120.png" width="64px" height="64px">
+            </ion-segment-button>
+            <ion-segment-button value="spiegel-online">
+                <img src="http://m.spiegel.de/static/V2/logo/favicon/touch-icon120.png" width="64px" height="64px">
+            </ion-segment-button>
+
+            <ion-segment-button value="the-new-york-times">
+                <img src="https://mobile.nytimes.com/vi-assets/apple-touch-icon-319373aaf4524d94d38aa599c56b8655.png" width="64px" height="64px">
+            </ion-segment-button>
+            <ion-segment-button value="the-wall-street-journal">
+                <img src="https://www.wsj.com/apple-touch-icon-precomposed.png" width="64px" height="64px">
+            </ion-segment-button>
+            <ion-segment-button value="the-washington-post">
+                <img src="https://www.washingtonpost.com/favicon.ico" width="64px" height="64px">
+            </ion-segment-button>
+            <ion-segment-button value="al-jazeera-english">
+                <img src="http://www.aljazeera.com/mritems/assets/images/touch-icon-iphone-retina.png" width="64px" height="64px">
+            </ion-segment-button>
+            <ion-segment-button value="bbc-sport">
+                <img src="http://static.bbci.co.uk/onesport/2.11.230/images/web-icons/bbc-sport-180.png" width="64px" height="64px">
+            </ion-segment-button>
         </ion-segment>
     </ion-toolbar>
 </ion-header>
